<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dizain_backgrount"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_0"
        android:layout_width="160dp"
        android:layout_height="73dp"
        android:background="@drawable/dizain_btn_numbers"
        android:onClick="btn_0"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_9"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:background="@drawable/dizain_btn_numbers"
        android:onClick="btn_9"
        android:text="@string/nine"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_1"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:background="@drawable/dizain_btn_numbers"
        android:onClick="btn_1"
        android:text="@string/one"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_3"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:background="@drawable/dizain_btn_numbers"
        android:onClick="btn_3"
        android:text="@string/tree"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_4"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:background="@drawable/dizain_btn_numbers"
        android:onClick="btn_4"
        android:text="@string/fore"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_5"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:background="@drawable/dizain_btn_numbers"
        android:onClick="btn_5"
        android:text="@string/fife"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_2"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:background="@drawable/dizain_btn_numbers"
        android:onClick="btn_2"
        android:text="@string/two"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_6"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:background="@drawable/dizain_btn_numbers"
        android:onClick="btn_6"
        android:text="@string/six"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_8"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:background="@drawable/dizain_btn_numbers"
        android:onClick="btn_8"
        android:text="@string/eght"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_7"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:background="@drawable/dizain_btn_numbers"
        android:onClick="btn_7"
        android:text="@string/seven"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_rapiataya"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/dizain_btn_funct"
        android:onClick="btn_rapiataya"
        android:text="@string/zapataya"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_plus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/dizain_btn_funct"
        android:onClick="btn_plus"
        android:text="@string/plus"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_minus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/dizain_btn_funct"
        android:onClick="btn_minus"
        android:text="@string/minus"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delenie"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/dizain_btn_funct"
        android:onClick="btn_delenie"

        android:text="@string/delenie"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_umnozh"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/dizain_btn_funct"
        android:onClick="btn_umnozh"
        android:text="@string/ymnozh"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_rezult"
        android:layout_width="356dp"
        android:layout_height="101dp"
        android:background="@drawable/dizain_btn_funct"
        android:onClick="btn_rezult"
        android:text="@string/rezult"
        android:textSize="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_scob_r"
        android:layout_width="135dp"
        android:layout_height="60dp"
        android:background="@drawable/dizain_btn_funct"
        android:onClick="btn_scob_r"
        android:text="@string/scobR"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_scob_l"
        android:layout_width="135dp"
        android:layout_height="60dp"
        android:background="@drawable/dizain_btn_funct"
        android:onClick="btn_scob_l"
        android:text="@string/scob"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/peviousCalculationView"
        android:layout_width="102dp"
        android:layout_height="46dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/displayEditText"
        android:layout_width="242dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Deleat"
        android:layout_width="149dp"
        android:layout_height="62dp"
        android:background="@drawable/dizain_btn"
        android:onClick="BTN_deleat"
        android:text="@string/Deleat"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/clean"
        android:layout_width="174dp"
        android:layout_height="66dp"
        android:background="@drawable/dizain_btn"
        android:onClick="BTN_clean"
        android:text="@string/Clean_2"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

</androidx.constraintlayout.widget.ConstraintLayout>